# gnugo

./: CMakeLists.txt  config.h.cmake
engine/: globals.c  liberty.h
interface/: CMakeLists.txt  jni_and.c  play_gtp.c
patterns/: CMakeLists.txt
utils/: winsocket.h
